maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:47: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    setDirection(dir)
    ^Escaper:48: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (!estFaceMur()) {
    ^Escaper:52: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    setDirection(directionCourante)
    ^Escaper:53: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return false
    ^